2007-07-07  Chris Morley

	*src/descriptor.cpp, src/include/openbabel/descriptor.h:
	Add wildcard * facility and simplify - remove GenericDataCompare.
	
2007-07-06  Chris Morley

	* src/descriptor.cpp, src/include/openbabel/descriptor.h:
	Add MatchPairData() so that Property names with spaces can be
	searched for by replacing them with underscores in the filter,
	append or delete strings, as suggested by Noel.
	(GenericDataCompare): fix test for two numbers
	Added GetValues() to implement --append
	
	*src/transform.cpp: Extra option: --append (to mol title).
	Does what Joey Bedell wanted.
	
2007-06-15  Chris Morley
	
	* src/smartsdescriptors.cpp: Added SmartsDescriptor class to 
	allow filters based on SMARTStest (like Number of Hydrogen
	Bond Acceptors) to be defined in a single line.
	A few (SMARTS from JoelLib) are defined: HBA1 HBA2 HBD nF
	
	* src/filters.cpp: in SMARTS filter only look for single match.
	
	* src/formats/inchiformat.cpp: small change in Description()

2007-06-05  Chris Morley

	* src/formats/smilesformat.cpp(ParseSmiles):ignore any char<0
	Caused crash in isspace() in Visual C++8. Probably solves bug
	#1730132.
	
2007-06-01  Noel O'Boyle <baoilleach@gmail.com>

	Final changes for Windows release of OBPython 1.2

	* windows-vc2005/OBPython/setup.py: bumped version up to 1.2
	* scripts/python/pybelapi.py: updated API docs

2007-05-30  Chris Morley

	* include/openbabel/base.h(tokenize): Add \r to default
	delimiters in the two functions. Now Windows or MAC files
	(esp data files) should be read properly. 
	Cures bug #1727333, I hope.
	
2007-05-30  Chris Morley

	* src/fingerprint.cpp(Tanimoto): return 0.0 if no bits set.
	Should cure bug #1728410.
	
2007-05-30  Chris Morley

	* include/openbabel/lineend.h: remove sync()call from destructor
	so that can delete in OBConversion's destructor after
	istreams have gone.
	
	* include/openbabel/obconversion.h, *src/obconversion.cpp
	Add InstallStreamFilter() and call from Read() and Convert().